--- a/Assignment-4/code/src/Postview.css
+++ b/Assignment-4/code/src/Postview.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .site-container{
   text-align: center;
 }
@@ -9,3 +13,72 @@ body {
   color: black;
   margin:0;
 } 
+.nav_header{
+  height: 50px;
+  position: sticky;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid black;
+
+}
+.navbar_camera{
+  margin-left: 60%;
+}
+.instalogo_name{
+  color: green;
+  font-weight: bold;
+  font-size: 25px;
+}
+.Box_container1{
+  width: 50%;
+  height: 380px;
+  border: 1px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 25%;
+  margin-right: 25%;
+
+}
+.data_container{
+  display: flex;
+  flex-direction: row;
+}
+.header_content{
+  text-align: left;
+  margin-left: 10px;
+}
+.header_content1{
+  padding-top: 10px;
+  margin-left: 82%;
+}
+.middle_container{
+  width: 100%;
+  margin-top: 10px;
+}
+.middle_container img{
+  width: 100%;
+  height: 200px;
+}
+.bottomFirst_content{
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.share_button{
+  margin-left: 15px;
+}
+.Date{
+  margin-left: 75%;
+}
+.Likes_count{
+  text-align: left;
+  margin-left: 12px;
+}
+.description_box{
+  text-align: left;
+  margin-left: 12px;
+  margin-top: 10px;
+}
+
